# future-of-coding-weekly

./: .eslintrc.json  .gitignore  .prettierrc  Makefile  NewsletterTemplate.html  NewsletterTemplate.md  README.md  app.js  attachmentdump.py  common.js  detinyletter.js  helpers.html  helpers.js  index.html  load_history_from_export.py  package-lock.json  package.json  queue.md  remindeme.js  remindme.js  shell.nix  slack2sqlite.py  slack_export.py
.github/ISSUE_TEMPLATE/: newsletter-week-issue.md
future-of-newsletters/: README.md  fon.js
future-of-newsletters/foc-server/: .gitignore  Cargo.toml  justfile  shell.nix
future-of-newsletters/foc-server/resources/: base-config.toml
future-of-newsletters/foc-server/resources/containers/ubuntu/: Dockerfile
future-of-newsletters/foc-server/resources/systemd/: foc-search-api.service  foc-search-server.service  foc.service
future-of-newsletters/foc-server/src/: db.rs  lib.rs  mail.rs  main.rs  server.rs
future-of-newsletters/foc-server/ui/: index.html
future-of-newsletters/foc-server/ui/css/: style.css
future-of-newsletters/foc-server/ui/js/: app.js
future-of-newsletters/resources/: config.toml  mail-send-config.toml  sample-subscribers.csv
history/: .gitignore  app.js  channels.json  common.js  emoji.js  history.js  index.html  index.txt  md.js  newsletter.js  style.css  users.json
history/2020-01-w-1/: channels.json
history/2020-01-w-2/: channels.json
history/2020-01-w-3/: channels.json
history/2020-01-w-4/: channels.json
history/2020-02-w-1/: channels.json
history/2020-02-w-2/: channels.json
newsletter/: archive.html  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.html  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
newsletter-content/: .gitignore  conf.py
search/: .gitignore  Makefile  README.md  app.js  config.cfg  index.html  ingest.py  nginx-sites-available  search.py  server.py  style.css
(+9099 files in other folders)
