[package]
name = "foc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version = "1.1.2", features = ["behavior-version-latest"]}
aws-sdk-ses = "1.10.0"
axum = { version = "0.7", features = ["http2", "macros", "json"] }
axum-server = "0.6.0"
chrono = "0.4"
clap = "4.4.16"
fern = "0.6"
futures = "0.3"
hyper = "1.1.0"
log = "0.4"
mime = "0.3.17"
mime_guess = "2.0.4"
nanoid = "0.4"
rusqlite = "0.30"
rust-embed = { version = "8.2", features = ["compression", "include-exclude", "mime-guess"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"]}
