[package]
name = "foc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version = "1.1", features = ["behavior-version-latest"]}
aws-sdk-ses = "1.10"
axum = { version = "0.7", features = ["http2", "macros", "json"] }
axum-server = "0.6"
chrono = "0.4"
clap = "4.4"
csv = "1.3"
fern = "0.6"
futures = "0.3"
hyper = "1.1"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
nanoid = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5.1"
rust-embed = { version = "8.2", features = ["compression", "include-exclude", "mime-guess"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.7", features = ["v7"] }
minijinja = "1.0"
url = "2.5"
thiserror = "1.0"
toml = "0.8.9"
libsqlite3-sys = "0.28"

[[bin]]
name = "foc"
path = "src/main.rs"

[lib]
name = "libfoc"
path = "src/lib.rs"
crate-type = ["lib"]
